[gd_scene load_steps=6 format=3 uid="uid://dec70hdopmyev"]

[ext_resource type="Script" uid="uid://c0rkq4kajmece" path="res://scripts/enemies/pider.gd" id="1_846l7"]
[ext_resource type="Texture2D" uid="uid://csxn5o84jmyad" path="res://art/characters/pider.png" id="2_846l7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qongi"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_846l7"]
radius = 73.9358

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qongi"]
bg_color = Color(0.757237, 0, 0.114266, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.36815, 0.0562213, 0.0785004, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Pider" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_846l7")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_846l7")
offset = Vector2(0, -22)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -21)
shape = SubResource("CircleShape2D_qongi")

[node name="AttackArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0.5, -20.5)
shape = SubResource("CircleShape2D_846l7")

[node name="ShootTimer" type="Timer" parent="."]

[node name="MeleeTimer" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -48.0
offset_top = 4.0
offset_right = 48.0
offset_bottom = 31.0
theme_override_styles/fill = SubResource("StyleBoxFlat_qongi")
value = 100.0

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="MeleeTimer" to="." method="_on_melee_timer_timeout"]
